# solana-anchor-project

./: Anchor.toml  README.md
programs/AnchorProject/: Cargo.toml
programs/AnchorProject/src/: lib.rs
tests/: AnchorProject.ts
